# predictive-unit

./: CMakeLists.txt  Dockerfile  HostMap.pb.txt  build-base-image.sh  build-image.sh  dataset.py  gen-py-protos.sh  main.py  model.py  run.sh  util.py
_cpp_scrap/: HostMap.pb.txt
_cpp_scrap/predictive-unit/: CMakeLists.txt  base.cpp  protocol.cpp  protocol.h
_cpp_scrap/predictive-unit-bin/: predictive-unit.cpp
_cpp_scrap/predictive-unit-test/: predictive-unit-test.cpp
_cpp_scrap/predictive-unit/nn/: layer.h
_cpp_scrap/predictive-unit/protos/: matrix.proto  messages.proto  sim.proto
_cpp_scrap/predictive-unit/simulator/: dispatcher.h  message-server.h  simulator.h
_cpp_scrap/predictive-unit/util/: argument.cpp  matrix.h  proto-struct.cpp  proto-struct.h  protobuf.h  ring-matrix-buffer.cpp  ring-matrix-buffer.h  rwqueue.h  tuple.h
base-image/: Dockerfile
cmake/: FindProtobuf.cmake
graph/: main.py
poc/: baseline.py  basic.py  basic_pc.py  basic_pc_cont.py  basic_pc_xor.py  deep_pc.py  poc.py  poc_work.py  poc_work0.py  proved_poc_xor.py  sym.py  temp.py
poc/analysis/: analysis.py  analysis_2dim.py  analysis_2dim_2.py  grad_analysis.py  grad_analysis_tf.py  sym.py
poc/analysis/ahl/: ahl.py
poc/analysis/dumb/: dumb.py  dumb2.py  dumb3.py  dumb4.py
poc/ff_try/: deep_pc_ff.py
predictive-unit/: CMakeLists.txt  base.cpp  base.h  defaults.cpp  error.h  log.cpp  protocol.cpp  protocol.h
predictive-unit-bin/: CMakeLists.txt  client.h  defaults.h  dispatcher.h  io-inl.h  io.cpp  io.h  layer.h  message-server.h  network.h  predictive-unit.cpp  protocol.cpp  protocol.h  simulator.h
predictive-unit-test/: CMakeLists.txt  predictive-unit-test.cpp
predictive-unit/contrib/rwq/: atomicops.h
predictive-unit/nn/: CMakeLists.txt  layer-config.h  layer.h
predictive-unit/protos/: CMakeLists.txt  hostmap.proto  layer-config.proto  matrix.proto  messages.proto
predictive-unit/simulator/: CMakeLists.txt  dispatcher.h  message-server.cpp  message-server.h  simulator.h
predictive-unit/util/: CMakeLists.txt  argument.cpp  argument.h  matrix.cpp  matrix.h  maybe.cpp  maybe.h  optional.h  proto-struct.h  protobuf.cpp  rwqueue.cpp  string.cpp  string.h
python/: cli.py  dataset.py  exp.list  main.py  model.py  util.py
python/hebb_test/: hebb_test.py  hebb_test_simple.py
python/poc/: baseline.py  cnet.py  common.py  deep_pc.py  deep_pc_classify.py  net.py  pc_grad_flow.py  poc_work.py
python/poc/analysis/: __analysis_2dim_scrap.py
python/poc/analysis/ahl/: ahl.py
python/poc_fresh/: poc_fresh.py  poc_fresh_chl.py
python/pu/: cli.py  config.py  io.py  main.py  protocol.py  pu_check.py  pu_common.py  test.py  test_plot.py
python/pu/_old_scrap/: pu_common.py
src/: CMakeLists.txt  Dockerfile  attach.sh  run.sh
src/base-image/: Dockerfile
src/predictive-unit/: CMakeLists.txt  base.h  layer.h  log.h  model-config.h  model.h
src/predictive-unit-bin/: CMakeLists.txt  arg.h  client.h  dispatcher.h  predictive-unit.cpp  protocol.cpp  protocol.h  simulator.h
src/predictive-unit-server/: CMakeLists.txt
src/predictive-unit-test/: CMakeLists.txt  predictive-unit-test.cpp  test-pu.cpp
src/predictive-unit/nn/: layer-config.h  layer.h
src/predictive-unit/protos/: CMakeLists.txt  layer-config.proto  messages.proto  model-config.proto
src/predictive-unit/util/: CMakeLists.txt  argument.cpp  proto-struct-inl.h  proto-struct.h  string.h
src/python/: cli.py  generate-message.py
